# sumire

./: .gitignore  Cargo.toml  README.md
app/: index.html  tailwind.config.js
app/assets/: sumire.css
app/css/: sumire.css
app/html/: about.html  auth.html  landing.html  main.html  notes.html  settings.html
app/js/: auth.js  global.js  index.js  landing.js  main.js  notes.js  settings.js  toast.js
db/: schema.sql
src/: app.rs  config.rs  main.rs  scheme.sql  smtp.rs  wah.rs
src/api/: health.rs  log.rs  mod.rs  notes.rs  token.rs  users.rs  validation.rs  wah.rs
src/api/notes/: delete.rs  mod.rs  read.rs  update.rs  write.rs
src/api/users/: email.rs  login.rs  mod.rs  password.rs  register.rs  username.rs
test/: REST_Client.http  health.http  notes.http  token.http  users.http  wah.http
