[package]
name = "sumire"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["kyaruwo"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# core
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4" }
axum-extra = { version = "0.9.2", features = ["cookie"] }
tower-http = { version = "0.5.2", features = ["fs"] }

# database
sqlx = { version = "0.7.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }

# json
serde = { version = "1.0.197", features = ["derive"] }

# regex
lazy_static = "1.4.0"
regex = "1.10.3"

# data
validator = { version = "0.16.1", features = ["derive"] }

# password
argon2 = "0.5.3"

# session_id
rand = "0.8.5"

# mailer
lettre = "0.11.4"

# environment variables
dotenvy = "0.15.7"
